--- a/WebMap.html
+++ b/WebMap.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="http://js.arcgis.com/3.14/esri/css/esri.css">
 	<script src="http://js.arcgis.com/3.14/"></script>
 	<link rel = "stylesheet" href="style.css">
-    
+    <script src="script.js"></script>
 
   </head>
   <header>
@@ -19,19 +19,20 @@
 			</div>
 		</div>
 		<div class="textArea" style="width: 829px;">
-			<h1 class="title" tabindex="0" style="margin-top: 40px;">Ruskins Journey</h1>
+			<h1 class="title" tabindex="0">Ruskins Journey</h1>
 		</div>
 	</div>
   </header>
    
   <body>
 
-<div id="footer">
-<canvas id="tutorial" width="150" height="150"></canvas>
-</div>
-  
-  
-  <div id="mapDiv"></div>
-  <script src="script.js"></script>
+    <div id="footer">
+        <canvas id="tutorial" width="150" height="150"></canvas>
+    </div>
+
+    <div id="mapDiv">
+
+    </div>
+
   </body>
 </html>
