--- a/WebMap.html
+++ b/WebMap.html
@@ -3,7 +3,8 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
-	<link rel="stylesheet" href="http://js.arcgis.com/3.14/esri/css/esri.css">
+	<title>The Ruskin Journey</title>
+    <link rel="stylesheet" href="http://js.arcgis.com/3.14/esri/css/esri.css">
 	<script src="http://js.arcgis.com/3.14/"></script>
 	<link rel = "stylesheet" href="style.css">
     <script src="script.js"></script>
@@ -25,14 +26,11 @@
   </header>
    
   <body>
-
+    <div id="mapDiv" class="map">
+      <div id="HomeButton"></div>
+    </div>
     <div id="footer">
         <canvas id="tutorial" width="150" height="150"></canvas>
     </div>
-
-    <div id="mapDiv">
-
-    </div>
-
   </body>
 </html>
