layers and toggle layers
Well it's 6am. pulled an all nighter to get this done. pretty big
commit. it isnt very pretty right now but it works, and i'm tired. there
is a csv file that loads earthquake data (just for show, we will replace
it later, i just needed data to see what was happening). Go ahead click
on the word earthquake and watch first layer magically disappear!! (zoom
out first tho.)

--- a/WebMap.html
+++ b/WebMap.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="http://js.arcgis.com/3.14/esri/css/esri.css">
 	<script src="http://js.arcgis.com/3.14/"></script>
 	<link rel = "stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="script.js"></script>
 
   </head>
@@ -20,14 +21,17 @@
 			</div>
 		</div>
 		<div class="textArea" style="width: 829px;">
-			<h1 class="title" tabindex="0">Ruskins Journey</h1>
+            <h1 class="title" tabindex="0">Ruskins Journey</h1>
 		</div>
 	</div>
   </header>
    
   <body>
     <div id="mapDiv" class="map">
-      <div id="HomeButton"></div>
+        <div id="HomeButton"></div>
+        <ul>
+            <li id="layer1">earthquakes</li>
+        </ul>
     </div>
     <div id="footer">
         <canvas id="tutorial" width="150" height="150"></canvas>
