made legend checkbox and functionality
The whole team did this together.

--- a/WebMap.html
+++ b/WebMap.html
@@ -29,9 +29,6 @@
   <body>
     <div id="mapDiv" class="map">
         <div id="HomeButton"></div>
-        <ul>
-            <li id="layer1">earthquakes</li>
-        </ul>
     </div>
 	
 	<div class ="rightPane">
@@ -39,18 +36,12 @@
 			<form>
 				<fieldset>
 				<legend> Perspective </legend>
-				<table align="left">
-					<tr>
-						<td> Mary and John</td>
-					</tr>
-					<tr>
-						<td> Ruskin </td>
-					</tr>
-					<tr>
-						<td> Witness </td>
-					</tr>
-				</table>
-				</fieldset>
+                    <input type="checkbox" id="layer1"> Mary and John
+                    <br>
+                    <input type="checkbox"> Ruskin
+                    <br>
+                    <input type="checkbox"> Witness
+                </fieldset>
 			</form>
 				
 		</div>
