--- a/WebMap.html
+++ b/WebMap.html
@@ -26,7 +26,7 @@
 	</div>
   </header>
    
-  <body>
+  <body onload ="int();">
     <div id="mapDiv" class="map">
         <div id="HomeButton"></div>
     </div>
@@ -47,7 +47,12 @@
 		</div>
 	</div>
     <div id="footer">
-        <canvas id="tutorial" width="150" height="150"></canvas>
+
+        <input type="range" min = "1" max="5" step = "1" onchange = "getValue(this.value)"/>
+        <span id="range"></span>
+
+        <canvas id="tutorial" width="1250" height="150"></canvas>
+
     </div>
   </body>
 </html>
