toggle, layer, and css are all fixed

--- a/WebMap.html
+++ b/WebMap.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel = "stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="script.js"></script>
 
   </head>
@@ -37,40 +38,26 @@
 			<form>
 				<fieldset>
 				<legend> Perspective </legend>
-                    <input type="checkbox" id="layer1"> Mary and John
-                    <br>
+                    <input type="checkbox" id="layer1" checked> Mary and John
+                    <!--<br>
                     <input type="checkbox"> Ruskin
                     <br>
-                    <input type="checkbox"> Witness
+                    <input type="checkbox"> Witness-->
                 </fieldset>
 			</form>
 				
 		</div>
 	</div>
     <div id="footer">
-<<<<<<< HEAD
         <div class="toggle"><i class="fa fa-arrow-up"></i></div>
         <div class= "timeline">
-
         </div>
-=======
 
-        <input type="range" min = "1" max="5" step = "1" onchange = "getValue(this.value)"/>
+        <!--<input type="range" min = "1" max="5" step = "1" onchange = "getValue(this.value)"/>
         <span id="range"></span>
 
-        <canvas id="tutorial" width="1250" height="150"></canvas>
+        <canvas id="tutorial" width="1250" height="150"></canvas>-->
 
->>>>>>> origin/master
     </div>
-
-
-    <div id="mapDiv"></div>
-    <script src="script.js"></script>
-    <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script>
-        $("#footer").click(function(){
-            $(this).toggleClass("opened")
-        })
-    </script>
   </body>
 </html>
