--- a/WebMap.html
+++ b/WebMap.html
@@ -8,56 +8,53 @@
 	<script src="http://js.arcgis.com/3.14/"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel = "stylesheet" href="style.css">
+    <script src="script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="script.js"></script>
-
   </head>
-  <header>
-	<div id="header" style="display: block; background-color: #3B5786;">
-		<div class="rightArea">
-			<div class="logo">
-				<a target="_blank" style="cursor: default;">
-					<img alt="Map Tour Logo" class="headerLogoImg" src="http://i446.photobucket.com/albums/qq183/coryclapp/ruskin_logo_zpsz32unfpj.jpg">
-				</a>
-			</div>
-		</div>
-		<div class="textArea" style="width: 829px;">
-            <h1 class="title" tabindex="0">Ruskins Journey</h1>
-		</div>
-	</div>
-  </header>
-   
+
   <body onload ="int();">
     <div id="mapDiv" class="map">
+        <header>
+            <div id="header" style="display: block; background-color: #3B5786;">
+                <div class="rightArea">
+                    <div class="logo">
+                        <a target="_blank" style="cursor: default;">
+                            <img alt="Map Tour Logo" class="headerLogoImg" src="http://i446.photobucket.com/albums/qq183/coryclapp/ruskin_logo_zpsz32unfpj.jpg">
+                        </a>
+                    </div>
+                </div>
+                <div class="textArea" style="width: 829px;">
+                    <h1 class="title" tabindex="0">Ruskins Journey</h1>
+                </div>
+            </div>
+        </header>
         <div id="HomeButton"></div>
-    </div>
-	
-	<div class ="rightPane">
-		<div class="legend">
-			<form>
-				<fieldset>
-				<legend> Perspective </legend>
-                    <input type="checkbox" id="layer1" checked> Mary and John
-                    <!--<br>
-                    <input type="checkbox"> Ruskin
-                    <br>
-                    <input type="checkbox"> Witness-->
-                </fieldset>
-			</form>
-				
-		</div>
-	</div>
-    <div id="footer">
-        <div class="toggle"><i class="fa fa-arrow-up"></i></div>
-        <div class= "timeline">
+        <div class ="rightPane">
+            <div class="legend">
+                <form>
+                    <fieldset>
+                        <legend> Perspective </legend>
+                        <input type="checkbox" id="layer1" checked> Mary and John
+                        <!--<br>
+                        <input type="checkbox"> Ruskin
+                        <br>
+                        <input type="checkbox"> Witness-->
+                    </fieldset>
+                </form>
+            </div>
         </div>
+        <footer>
+            <div id="footer">
+                <!--<div class="toggle"><i class="fa fa-arrow-up"></i></div>
+                <div class= "timeline"></div>
 
-        <!--<input type="range" min = "1" max="5" step = "1" onchange = "getValue(this.value)"/>
-        <span id="range"></span>
+                <!--<input type="range" min = "1" max="5" step = "1" onchange = "getValue(this.value)"/>
+                <span id="range"></span>
 
-        <canvas id="tutorial" width="1250" height="150"></canvas>-->
-
+                <canvas id="tutorial" width="1250" height="150"></canvas>-->
+            </div>
+        </footer>
     </div>
   </body>
 </html>
