added 2 more layers

--- a/WebMap.html
+++ b/WebMap.html
@@ -8,9 +8,9 @@
 	<script src="http://js.arcgis.com/3.14/"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel = "stylesheet" href="style.css">
-    <script src="script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="script.js"></script>
   </head>
 
   <body onload ="int();">
@@ -36,10 +36,10 @@
                     <fieldset>
                         <legend> Perspective </legend>
                         <input type="checkbox" id="layer1" checked> Mary and John
-                        <!--<br>
-                        <input type="checkbox"> Ruskin
                         <br>
-                        <input type="checkbox"> Witness-->
+                        <input type="checkbox" id="layer2" checked> Ruskin
+                        <br>
+                        <input type="checkbox" id="layer3" checked> Witness
                     </fieldset>
                 </form>
             </div>
