toggle bar working

--- a/WebMap.html
+++ b/WebMap.html
@@ -46,7 +46,7 @@
         </div>
         <footer>
             <div id="footer">
-                <!--<div class="toggle"><i class="fa fa-arrow-up"></i></div>
+                <div class="toggle"><i class="fa fa-arrow-up"></i></div>
                 <div class= "timeline"></div>
 
                 <!--<input type="range" min = "1" max="5" step = "1" onchange = "getValue(this.value)"/>
