--- a/WebMap.html
+++ b/WebMap.html
@@ -47,7 +47,11 @@
         <footer>
             <div id="footer">
                 <div class="toggle"><i class="fa fa-arrow-up"></i></div>
-                <div class= "timeline"></div>
+                <div class= "timeline">
+                    <canvas id="timeline" width="1950" height="230">
+                    Your browser doesn't support canvas.
+                    </canvas>
+                </div>
 
                 <!--<input type="range" min = "1" max="5" step = "1" onchange = "getValue(this.value)"/>
                 <span id="range"></span>
