Change title and disable witness.

--- a/WebMap.html
+++ b/WebMap.html
@@ -26,7 +26,7 @@
                     </div>
                 </div>
                 <div class="textArea" style="width: 829px;">
-                    <h1 class="title" tabindex="0">Ruskins Journey</h1>
+                    <h1 class="title" tabindex="0">The Ruskin Journey</h1>
                 </div>
             </div>
         </header>
@@ -40,7 +40,7 @@
                         <br>
                         <input type="checkbox" id="layer2" checked> Ruskin
                         <br>
-                        <input type="checkbox" id="layer3" checked> Witness
+                        <!--<input type="checkbox" id="layer3" checked> Witness-->
                     </fieldset>
                 </form>
             </div>
