- linked Ruskin logo to "The Account..." index - changed time line slider from 220 to 215 (exact width of boxes) - inserted beginning of "more information" links but commented out

--- a/WebMap.html
+++ b/WebMap.html
@@ -20,7 +20,7 @@
             <div id="header" style="display: block; background-color: #3B5786;">
                 <div class="rightArea">
                     <div class="logo">
-                        <a target="_blank" style="cursor: default;">
+                        <a href="http://english.selu.edu/humanitiesonline/ruskin/apparatuses/account_of_a_tour_on_the_continent_apparatus.php" target="_blank" style="cursor: default;">
                             <img alt="Map Tour Logo" class="headerLogoImg" src="http://i446.photobucket.com/albums/qq183/coryclapp/ruskin_logo_zpsz32unfpj.jpg">
                         </a>
                     </div>
@@ -53,6 +53,7 @@
                     Your browser doesn't support canvas.
                     </canvas>
                     <script>createBoxes()</script>
+                    <!--<script>createLinks()</script>-->
                 </div>
                 <img id="slideLeft" src="resources/icons/picturepanel-left2.png" alt="Left" width="50" height="100">
                 <img id="slideRight" src="resources/icons/picturepanel-right2.png" alt="Left" width="50" height="100">
