--- a/WebMap.html
+++ b/WebMap.html
@@ -47,7 +47,7 @@
         </div>
         <footer>
             <div id="footer">
-                <div class="toggle"><i class="fa fa-arrow-up" id="upArrow"></i></div>
+                <div class="toggle"><i class="fa fa-arrow-down fa-arrow-up ::before" id="upArrow"></i></div>
                 <div class= "timeline">
                     <canvas id="timeline" width="1950" height="230">
                     Your browser doesn't support canvas.
