--- a/WebMap.html
+++ b/WebMap.html
@@ -49,11 +49,11 @@
             <div id="footer">
                 <div class="toggle"><i class="fa fa-arrow-down fa-arrow-up ::before" id="upArrow"></i></div>
                 <div class= "timeline">
-                    <canvas id="timeline" width="1950" height="230">
+                    <canvas id="timeline" width="1950" height="205">
                     Your browser doesn't support canvas.
                     </canvas>
                     <script>createBoxes()</script>
-                    <!--<script>createLinks()</script>-->
+                    <script>createLinks()</script>
                 </div>
                 <img id="slideLeft" src="resources/icons/picturepanel-left2.png" alt="Left" width="50" height="100">
                 <img id="slideRight" src="resources/icons/picturepanel-right2.png" alt="Left" width="50" height="100">
