--- a/WebMap.html
+++ b/WebMap.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+
+<html dir="ltr">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 	<title>The Ruskin Journey</title>
+    <link rel="stylesheet" href="http://js.arcgis.com/3.14/dijit/themes/claro/claro.css">
     <link rel="stylesheet" href="http://js.arcgis.com/3.14/esri/css/esri.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel = "stylesheet" href="style.css">
@@ -11,11 +13,11 @@
     <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="script.js"></script>
-
   </head>
 
   <body>
-    <div id="mapDiv" class="map">
+      <div id ="search"></div>
+      <div id="mapDiv" class="map">
         <header>
             <div id="header" style="display: block; background-color: #3B5786;">
                 <div class="rightArea">
