completely redesigned the timeline. no more canvas. Chase and Jenna worked on this

--- a/WebMap.html
+++ b/WebMap.html
@@ -49,16 +49,16 @@
         </div>
         <footer>
             <div id="footer">
-                <div class="toggle"><i class="fa fa-arrow-down fa-arrow-up ::before" id="upArrow"></i></div>
-                <div class= "timeline">
-                    <canvas id="timeline" width="1950" height="205">
-                    Your browser doesn't support canvas.
-                    </canvas>
-                    <script>createBoxes()</script>
-                    <script>createLinks()</script>
+                <div class="toggle"><i class="fa fa-arrow-down fa-arrow-up ::before" id="upArrow" style="opacity: .5"></i></div>
+                <div id= "timeline">
+                    <div id="grad1"></div>
+                    <div id = "container">
+                        <script>createboxes()</script>
+                    </div>
+                    <div id="grad2"></div>
                 </div>
-                <img id="slideLeft" src="resources/icons/picturepanel-left2.png" alt="Left" width="50" height="100">
-                <img id="slideRight" src="resources/icons/picturepanel-right2.png" alt="Left" width="50" height="100">
+                <img id="slideLeft" src="resources/white-left-arrow.png" alt="Left" width="30" height="60">
+                <img id="slideRight" src="resources/white-right-arrow.png" alt="Left" width="30" height="60">
             </div>
         </footer>
     </div>
