--- a/WebMap.html
+++ b/WebMap.html
@@ -17,6 +17,9 @@
 
   <body>
       <div id ="search"></div>
+      <div id ="info">
+          <div>Search for a point in the map</div>
+      </div>
       <div id="mapDiv" class="map">
         <header>
             <div id="header" style="display: block; background-color: #3B5786;">
