fixed some broken stuff (layers, createBoxes)

--- a/WebMap.html
+++ b/WebMap.html
@@ -56,7 +56,8 @@
                 <div id= "timeline">
                     <div id="grad1"></div>
                     <div id = "container">
-                        <script>createboxes()</script>
+                        <script>createBoxes()</script>
+                        <script>createPopup()</script>
                     </div>
                     <div id="grad2"></div>
                 </div>
