added toggle buttons for the three timelines
script to create popups in the container was throwing an error and
causing the script to stop so I removed them for now.

--- a/WebMap.html
+++ b/WebMap.html
@@ -5,7 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 	<title>The Ruskin Journey</title>
-      <link rel="shortcut icon" href="http://i446.photobucket.com/albums/qq183/coryclapp/ruskin_logo_zpsz32unfpj.jpg" type="image/png"/>
     <link rel="stylesheet" href="http://js.arcgis.com/3.14/dijit/themes/claro/claro.css">
     <link rel="stylesheet" href="http://js.arcgis.com/3.14/esri/css/esri.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -57,13 +56,25 @@
                 <div id= "timeline">
                     <div id="grad1"></div>
                     <div id = "container">
-                        <script>createBoxes()</script>
-                        <script>createPopup()</script>
+                    </div>
+                    <div id="grad2"></div>
+                    <div id="grad1"></div>
+                    <div id = "container2">
+                    </div>
+                    <div id="grad2"></div>
+                    <div id="grad1"></div>
+                    <div id = "container3">
                     </div>
                     <div id="grad2"></div>
                 </div>
                 <img id="slideLeft" src="resources/white-left-arrow.png" alt="Left" width="30" height="60">
                 <img id="slideRight" src="resources/white-right-arrow.png" alt="Left" width="30" height="60">
+            
+                <div id="buttonContainer">
+                    <input type="button" id="timebutton1" value="Timeline 1">
+                    <input type="button" id="timebutton2" value="Timeline 2">
+                    <input type="button" id="timebutton3" value="Timeline 3">
+                </div>
             </div>
         </footer>
     </div>
