createBoxes now works with new tabs.
the slider only works with the first time line. a get function will need
to be coded to check what timeline is visible

--- a/WebMap.html
+++ b/WebMap.html
@@ -66,13 +66,13 @@
                 <div id= "timeline">
                     <div id="grad1"></div>
                     <div class ="container" id = "container1">
-                        <script>createBoxes(container1)</script>
+                        <script>createBoxes(1)</script>
                     </div>
                     <div class ="container" id = "container2">
-                        <script>createBoxes(container2)</script>
+                        <script>createBoxes(2)</script>
                     </div>
                     <div class ="container" id = "container3">
-                        <script>createBoxes(container3)</script>
+                        <script>createBoxes(3)</script>
                     </div>
                     <div id="grad2"></div>
                 </div>
