--- a/WebMap.html
+++ b/WebMap.html
@@ -55,24 +55,25 @@
             <div id="footer">
                 <div class="toggle">
                     <div id="buttonContainer">
-                        <input type="button" class="timeButton" id="timebutton1" value="Timeline 1">
-                        <input type="button" class="timeButton" id="timebutton2" value="Timeline 2">
+                        <input type="button" class="timeButton" id="timebutton1" value="Mary and John">
+                        <input type="button" class="timeButton" id="timebutton2" value="Ruskin">
                         <input type="button" class="timeButton" id="timebutton3" value="Timeline 3">
                     </div>
                     <i class="fa fa-arrow-down fa-arrow-up ::before" id="upArrow" style="opacity: .5"></i>
                 </div>
                 <div id= "timeline">
                     <div id="grad1"></div>
-                    <div class ="container" id = "container1">
+                    <div class ="timecontainer" id = "container1" style="display: block;">
                         <script>createBoxes(1)</script>
                     </div>
-                    <div class ="container" id = "container2">
+                    <div class ="timecontainer" id = "container2" style="display: block;">
                         <script>createBoxes(2)</script>
                     </div>
-                    <div class ="container" id = "container3">
+                    <div class ="timecontainer" id = "container3" style="display: block;">
                         <script>createBoxes(3)</script>
                     </div>
                     <div id="grad2"></div>
+                    <script>setVisibleContainer(1)</script>
                 </div>
                 <img id="slideLeft" src="resources/white-left-arrow.png" alt="Left" width="30" height="60">
                 <img id="slideRight" src="resources/white-right-arrow.png" alt="Left" width="30" height="60">
