close popup function

--- a/WebMap.html
+++ b/WebMap.html
@@ -76,7 +76,7 @@
                     <script>setVisibleContainer(1)</script>
                 </div>
                 <img id="slideLeft" src="resources/white-left-arrow.png" alt="Left" width="30" height="60">
-                <img id="slideRight" src="resources/white-right-arrow.png" alt="Left" width="30" height="60">
+                <img id="slideRight" src="resources/white-right-arrow.png" alt="Right" width="30" height="60">
             </div>
         </footer>
     </div>
