Make changes to timeline and popup boxes

--- a/WebMap.html
+++ b/WebMap.html
@@ -36,6 +36,18 @@
             </div>
         </header>
         <div id="HomeButton"></div>
+        <!--
+        <div id="ownSearch">
+            <form>
+                <fieldset id="s">
+                    <legend>Search city:</legend>
+                    <input type="text" id = "myText" name="City_Name"><br>
+                </fieldset>
+                <button id="submit">Submit</button>
+            </form>
+
+        </div>
+        -->
         <div id ="search"></div>
         <div class ="rightPane">
             <div class="legend">
