added some tooltips to the page and re-labeled the home tool tip if your interested in changing any esri tooltip thats how its done
in the script file you can change it to something more appropriate if
you see fit

--- a/WebMap.html
+++ b/WebMap.html
@@ -23,7 +23,7 @@
             <div id="header" style="display: block; background-color: #3B5786;">
                 <div class="rightArea">
                     <div class="logo">
-                        <a href="http://english.selu.edu/humanitiesonline/ruskin/apparatuses/account_of_a_tour_on_the_continent_apparatus.php" target="_blank" style="cursor: pointer;">
+                        <a href="http://english.selu.edu/humanitiesonline/ruskin/apparatuses/account_of_a_tour_on_the_continent_apparatus.php" target="_blank" style="cursor: pointer;" title="Ruskin Apparatus Page">
                             <img alt="Map Tour Logo" class="headerLogoImg"
                                  src="http://i446.photobucket.com/albums/qq183/coryclapp/ruskin_logo_zpsz32unfpj.jpg">
                         </a>
@@ -35,7 +35,7 @@
                 </div>
             </div>
         </header>
-        <div id="HomeButton"></div>
+        <div id="HomeButton" ></div>
         <!--
         <div id="ownSearch">
             <form>
