--- a/WebMap.html
+++ b/WebMap.html
@@ -23,18 +23,9 @@
   <body>
       <div id="mapDiv" class="map">
         <header>
-            <div id="header" style="display: block; background-color: #3B5786;">
-                <div class="rightArea">
-                    <div class="logo">
-                        <a href="http://english.selu.edu/humanitiesonline/ruskin/apparatuses/account_of_a_tour_on_the_continent_apparatus.php" target="_blank" style="cursor: pointer;" title="Ruskin Apparatus Page">
-                            <img alt="Map Tour Logo" class="headerLogoImg"
-                                 src="http://i446.photobucket.com/albums/qq183/coryclapp/ruskin_logo_zpsz32unfpj.jpg">
-                        </a>
-                    </div>
-                </div>
-                <div class="textArea" style="width: 829px;">
-                    <h1 class="title" tabindex="0" style = "position:fixed; top:-15px; font-size: xx-large;">The Ruskin
-                        Journey</h1>
+            <div id="header" style="display: block;">
+                <div class="textArea">
+                    <a href="http://english.selu.edu/humanitiesonline/ruskin/apparatuses/account_of_a_tour_on_the_continent_apparatus.php" target="_blank" title="Ruskin Apparatus Page"><h1 class="title" tabindex="0" style="position:relative; top:-15px; font-size: xx-large;"><img id="ruskin_logo" src="resources/ruskin_logo_2.png"></h1></a>
                 </div>
             </div>
         </header>
