completed data in timeline and some css

--- a/WebMap.html
+++ b/WebMap.html
@@ -25,7 +25,16 @@
         <header>
             <div id="header" style="display: block;">
                 <div class="textArea">
-                    <a href="http://english.selu.edu/humanitiesonline/ruskin/apparatuses/account_of_a_tour_on_the_continent_apparatus.php" target="_blank" title="Ruskin Apparatus Page"><h1 class="title" tabindex="0" style="position:relative; top:-15px; font-size: xx-large;"><img id="ruskin_logo" src="resources/ruskin_logo_2.png"></h1></a>
+                    <table align="center">
+                        <tr>
+                            <td>
+                                <a href="http://english.selu.edu/humanitiesonline/ruskin/apparatuses/account_of_a_tour_on_the_continent_apparatus.php" target="_blank" title="Ruskin Apparatus Page">
+                                    <img id="ruskin_logo" src="resources/ruskin_logo_2.png" >
+                                </a>
+                            </td>
+                        </tr>
+                    </table>
+
                 </div>
             </div>
         </header>
