--- a/WebMap.html
+++ b/WebMap.html
@@ -28,7 +28,7 @@
                     <table align="center">
                         <tr>
                             <td>
-                                <a href="http://english.selu.edu/humanitiesonline/ruskin/apparatuses/account_of_a_tour_on_the_continent_apparatus.php" target="_blank" title="Ruskin Apparatus Page">
+                                <a href="http://english.selu.edu/humanitiesonline/ruskin/apparatuses/account_of_a_tour_on_the_continent_apparatus.php" target="_blank" title="Go to Ruskin Apparatus Page">
                                     <img id="ruskin_logo" src="resources/ruskin_logo_2.png" >
                                 </a>
                             </td>
