popup boxes now show data
chase and dani

--- a/WebMap.html
+++ b/WebMap.html
@@ -49,7 +49,7 @@
                         <br>
                         <input type="checkbox" id="layer2" checked> Ruskin
                         <br>
-                        <input type="checkbox" id="layer3" checked> Placeholder Data
+                        <input type="checkbox" id="layer3" checked> Mock Witness
                     </fieldset>
                 </form>
             </div>
@@ -60,7 +60,7 @@
                     <div id="buttonContainer">
                         <input type="button" class="timeButton" id="timebutton1" value="Places">
                         <input type="button" class="timeButton" id="timebutton2" value="Ruskin">
-                        <input type="button" class="timeButton" id="timebutton3" value="PH Data">
+                        <input type="button" class="timeButton" id="timebutton3" value="Mock Witness">
                     </div>
                     <i class="fa fa-arrow-down fa-arrow-up ::before" id="upArrow" style="opacity: .5"></i>
                 </div>
